--- a/_sass/type.scss
+++ b/_sass/type.scss
@@ -24,7 +24,8 @@ h6 {
 
 p {
   margin: 0 0 0.75em; }
-
+  
+/* CSS for Button color fade out */
 a {
   color: #477dca;
   transition: color 150ms ease;
