--- a/_includes/more.html
+++ b/_includes/more.html
@@ -1,8 +1,18 @@
-<div class="container more-container">
-  <h3>{{ site.more_title | default: "A Little More About Me" }}</h3>
-  <div class="row clearfix">
-    <div class="col-md-12">
-      {{ site.more_content | strip | markdownify }}
-    </div>
-  </div>
+<div class="container title-container">
+<div class="row clearfix">
+<div class="col-md-12">
+<h3>{{ site.more_title | default: "A Little More About Me" }}</h3>
+</div>
+</div>
+</div>
+
+<div class="container">
+<div class="row clearfix">
+<div class="col-md-12">
+{{ site.more_content | strip | markdownify }}
+</div>
+</div>
+</div>
+<div class="container dash-container">
+<hr></hr>
 </div>
