--- a/_sass/modern-resume-theme.scss
+++ b/_sass/modern-resume-theme.scss
@@ -70,12 +70,12 @@ ul.icons a {
 }
 
 .profile-img {
-  width: 200px;
-  height: 200px;
+  width: 230px;
+  height: 230px;
   margin: 0 auto;
   margin-bottom: 20px;
   display: block;
-  border-radius: 100px;
+  border-radius: 115px;
   background-size: cover;
   background-position: center;
   background-repeat: repeat, no-repeat;
@@ -98,6 +98,27 @@ ul.icons a {
   h3 {
     margin-bottom: 0;
   }
+}
+
+.title-container {
+  h3 {
+    margin-bottom: 0;
+	padding-bottom: 0px;
+  }
+  
+  /* padding: -20px -20px; */
+  /* margin: 0 auto; */
+  font-size: 90%;
+  color: #fff;
+  background-color: #333;
+  border-radius: 3px;
+  -webkit-box-shadow: inset 0 0px 0 rgba(0,0,0,.25);
+  box-shadow: inset 0 0px 0 rgba(0,0,0,.25);
+}
+
+.dash-container {
+  /* padding: -20px -20px; */
+  margin: 0 auto;
 }
 
 .layout {
