--- a/_sass/type.scss
+++ b/_sass/type.scss
@@ -6,7 +6,7 @@ body {
   line-height: 1.5;
 
   @media print {
-    font-size: 0.9em;
+	font-size: 0.9em;
   }
 }
 
@@ -51,12 +51,11 @@ h3 {
   font-weight: 300;
   font-size: 3em;
   text-align: center;
-  border-bottom: dashed 2px #CCCCCC;
   padding-bottom: 10px;
   margin-bottom:40px;
 
   @media print {
-    margin-bottom: 20px;
+	margin-bottom: 20px;
   }
 }
 
@@ -74,6 +73,19 @@ p, ul {
 a i {
   font-size:1.6em;
 }
+
+/* Dashed Line */
+
+hr {
+  border:none;
+  border-top:2px dotted #333;
+  color:#fff;
+  background-color:#fff;
+  height:1px;
+  width:100%;
+}
+
+/* Highlighting */
 
 mark {
   padding: 2px 4px;
